compiler/tests/compiler/expected/output/ResetModuleAfterFunCall.shtk.txt
MODULE ResetModuleAfterFunCall.shtk
ERROR in Line 11 Col 30

    digital::digitalWrite(0, 0)
                             ^
Type error, did not expect Signal, expected TestModules/Digital.shtk::Signal

ResetModuleAfterFunCall.shtk:11:29
